tests/parsing/smtlib/mcil/errors/234_check-system_bad_query_1.mcil
(check-system system :query (q (r :query)))